--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stylelint-config-antipodes",
+  "name": "@antipodes-medical/stylelint-config-antipodes",
   "version": "1.0.0",
   "author": "Théo Benoit <theo@antipodesmultimedia.com>",
   "main": "index.js",
