--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "index.js"
   ],
   "peerDependencies": {
-    "stylelint": "^14.0.0"
+    "stylelint": "14.0.0"
   },
   "dependencies": {
     "stylelint-config-recommended-scss": "^6.0.0",
